[package]
name = "listener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
json = "0.12.4"
log = "0.4.22"
reqwest = "0.12.7"
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
